<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: keep the FAB above the keyboard-->

    <data>
        <variable
            name="firstHint"
            type="String" />
        <variable
            name="secondHint"
            type="String"/>
        <variable
            name="settings"
            type="org.phenoapps.intercross.data.models.Settings" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_events_group"
            app:constraint_referenced_ids="dataEntryLayout, recyclerView, bottom_nav_bar"/>

        <RelativeLayout
            android:id="@+id/dataEntryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/cell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstTextHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:hint="@{firstHint}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secondTextHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstTextHolder"
                app:hint="@{secondHint}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/crossTextHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/secondTextHolder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCross"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cross_id"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:visibility="visible"
                    app:setCrossId="@{settings}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/crossTextHolder"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_clear"
                android:text="@string/Clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crossTextHolder"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/clearButton"
                android:background="@drawable/button_save_empty"
                android:text="@string/save_text"
                android:textColor="#000000" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/sortingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/dataEntryLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortByTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sort by:"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"/>

            <Spinner
                android:id="@+id/sortBySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/sortOrderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ascending"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortingLayout"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_events" />

        <ImageButton
            android:id="@+id/fragment_events_search_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:background="@drawable/capture_button_background"
            android:contentDescription="@string/button_to_scan_next_text"
            android:cropToPadding="false"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:tint="#ffffff"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_tb_white_search" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:background="@drawable/capture_button_background"
            android:contentDescription="@string/button_to_scan_next_text"
            android:cropToPadding="false"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:tint="#ffffff"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:tint="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_barcode_scan" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_bot_nav"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>