...
        </action>
        <action android:id="@+id/action_to_wishlist_fragment"
            app:destination="@+id/wishlist_fragment"
            app:popUpTo="@id/events_fragment">
        </action>
        <action android:id="@+id/action_to_parents_fragment"
            app:destination="@+id/parents_fragment"
            app:popUpTo="@id/events_fragment"/>
        <action android:id="@+id/action_to_crossblock"
            app:destination="@+id/crossblock_fragment"
            app:popUpTo="@id/events_fragment"/>
        <action android:id="@+id/action_to_summary"
            app:destination="@+id/summary_fragment"
...
